--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,18 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
+	Start editing to see some magic happen :)
+	<br/>
+  Kalimat pertama di angular <br>
+  10 +20 = {{10 + 20}}<br>
+	<!-- <input type ="text" [(ngModel)]="a"/> + <input type ="text" [(ngModel)] ="b"/> -->
+	<input [(ngModel)] ="a" type="text" /> + <input [(ngModel)]="b" type ="text"/> ={{(a*1)+ (b*1)}}
+	<!-- {{hasil}}  -->
+	<br>
+	<br>
+	<!-- {{item.nama}} = {{item.harga | currency:'Rp.'}} / {{item.satuan}} -->
 </p>
+<div *ngFor="let fruit of item; let i = index">
+	{{i+1}}.{{fruit.nama}} = {{fruit.harga | currency:'Rp.'}} / {{fruit.satuan}}
+</div>
+
+<p *ngIf="tampil">bisa tampil</p>
